[project]
name = "Music_Combiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs[python]>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.26.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "tqdm>=4.67.1",
]
